Fix alignment of the search result entries

--- a/src/styles/features/search.css
+++ b/src/styles/features/search.css
@@ -262,7 +262,8 @@
 }
 
 .search-item-content {
-  padding-left: 0.5em;
+  box-sizing: border-box;
+  padding-right: 0.5em;
 }
 
 .search-item-content-datasource {
